# node-balancer

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/proxy/: proxy.rs
src/router/: addressable_node.rs  backend_pod.rs  balanced_service.rs  mod.rs  parse_nodes.rs  parse_pods.rs  parse_services.rs  port_map.rs  router.rs
